[DRFT-1209] Fix pagination overlap

--- a/src/App.scss
+++ b/src/App.scss
@@ -290,7 +290,7 @@
 .sticky-table-header {
   position: sticky;
   top: 0;
-  z-index: 9999;
+  z-index: 100;
 }
 
 .table-body-scroll {
